cloud-native-demo/deployment/fib-service-spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-fib-service
  namespace: open-feature-demo
  labels:
    app: open-feature-fib-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-fib-service
  template:
    metadata:
      labels:
        app: open-feature-fib-service
      annotations:
        openfeature.dev/enabled: "true"
        openfeature.dev/featureflagsource: "end-to-end"
    spec:
      containers:
        - name: fib-service
          image: ghcr.io/open-feature/playground-fib-service:v0.14.0
          args:
            - flagd
          ports:
            - containerPort: 30001
---
# Service exposed using NodePort
apiVersion: v1
kind: Service
metadata:
  name: open-feature-fibonacci-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-fib-service
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 30000
      targetPort: 30001
