cloud-native-demo/deployment/jaeger-tracing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-jaeger-agent
  namespace: open-feature-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo-jaeger
  template:
    metadata:
      labels:
        app: open-feature-demo-jaeger
    spec:
      containers:
        - name: open-feature-demo-jaeger
          image: jaegertracing/all-in-one:1.55
          args:
            - "--collector.otlp.enabled"
            - "--query.base-path=/jaeger"
          ports:
            - containerPort: 6832
            - containerPort: 4317
            - containerPort: 16686
            - containerPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-jaeger-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo-jaeger
  ports:
    - port: 4317
      targetPort: 4317
      name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-jaeger-ui
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo-jaeger
  ports:
    - port: 80
      targetPort: 16686
