cloud-native-demo/deployment/playground-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-playground-app
  namespace: open-feature-demo
  labels:
    app: open-feature-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo
  template:
    metadata:
      labels:
        app: open-feature-demo
      annotations:
        openfeature.dev/enabled: "true"
        openfeature.dev/featureflagsource: "end-to-end"
    spec:
      containers:
        - name: open-feature-demo
          image: ghcr.io/open-feature/playground-app:v0.16.0
          args:
            - flagd
          ports:
            - containerPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: flagd-ofrep-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8016
---
apiVersion: v1
kind: Service
metadata:
  name: flagd-grpc-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8013
