cloud-native-demo/deployment/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: playground-flagd-grpc
  namespace: open-feature-demo
spec:
  hostnames:
    - flagd.of-cloud-native.reining.dev
  parentRefs:
    - name: default-envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: flagd-grpc-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /flagd.evaluation.v1.Service
      timeouts:
        request: "0s"
    - backendRefs:
        - name: flagd-ofrep-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /ofrep
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: playground-flipt
  namespace: open-feature-demo
spec:
  hostnames:
    - flipt.of-cloud-native.reining.dev
  parentRefs:
    - name: default-envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: open-feature-demo-flipt
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: playground-goff
  namespace: open-feature-demo
spec:
  hostnames:
    - goff.of-cloud-native.reining.dev
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: open-feature-demo-goff-service
          port: 1031
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: playground
  namespace: open-feature-demo
spec:
  hostnames:
    - of-cloud-native.reining.dev
  parentRefs:
    - name: default-envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: open-feature-demo-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
