cloud-native-demo/deployment/jaeger.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: open-feature-demo
  name: jaeger
spec:
  parentRefs:
    - name: default-envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - jaeger.of-cloud-native.reining.dev
  rules:
    - backendRefs:
        - kind: Service
          namespace: open-feature-demo
          name: open-feature-demo-otel-collector-extension
          port: 16686
